vbnc/vbnc/tests/Errors/33107.vb
Option Strict On
Class A
    Shared Sub Main()
        Dim o As Object = If(1, 2)
    End Sub
End Class